--- a/_includes/themes/dbyll/default.html
+++ b/_includes/themes/dbyll/default.html
@@ -41,7 +41,7 @@
             <li class="active"><a href="{% if BASE_PATH %}{{ BASE_PATH }}{% else %}/{% endif %}">Home</a></li>
             <li><a href="{{ BASE_PATH}}{{ site.JB.categories_path }}">Categories</a></li>
             <li><a href="{{ BASE_PATH}}{{ site.JB.tags_path }}">Tags</a></li>
-            <li><a href="{{ BASE_PATH}}about.html">About</a></li>
+            <li><a href="{{% if BASE_PATH %}{{ BASE_PATH }}{% else %}/{% endif %}about.html">About</a></li>
             </ul>
             </div><!-- /.navbar-collapse -->
         </nav>
@@ -55,7 +55,7 @@
              <li><a href="{% if BASE_PATH %}{{ BASE_PATH }}{% else %}/{% endif %}"><i class="fa fa-home"></i> Home</a></li>
              <li><a href="{{ BASE_PATH}}{{ site.JB.categories_path }}"><i class="fa fa-folder"></i> Categories</a></li>
              <li><a href="{{ BASE_PATH}}{{ site.JB.tags_path }}"><i class="fa fa-tags"></i> Tags</a></li>
-			 <li><a href="{{ BASE_PATH}}about.html"><i class="fa fa-user"></i> About</a></li>
+			 <li><a href="{% if BASE_PATH %}{{ BASE_PATH }}{% else %}/{% endif %}about.html"><i class="fa fa-user"></i> About</a></li>
                <li class="divider"></li>
              <li><a href="#"><i class="fa fa-arrow-up"></i> Top of Page</a></li>
            </ul>
