--- a/_includes/themes/dbyll/default.html
+++ b/_includes/themes/dbyll/default.html
@@ -41,7 +41,7 @@
             <li class="active"><a href="{% if BASE_PATH %}{{ BASE_PATH }}{% else %}/{% endif %}">Home</a></li>
             <li><a href="{{ BASE_PATH}}{{ site.JB.categories_path }}">Categories</a></li>
             <li><a href="{{ BASE_PATH}}{{ site.JB.tags_path }}">Tags</a></li>
-            <li><a href="{{% if BASE_PATH %}{{ BASE_PATH }}{% else %}/{% endif %}about.html">About</a></li>
+            <li><a href="{% if BASE_PATH %}{{ BASE_PATH }}{% else %}/{% endif %}about.html">About</a></li>
             </ul>
             </div><!-- /.navbar-collapse -->
         </nav>
