--- a/assets/themes/dbyll/css/style.css
+++ b/assets/themes/dbyll/css/style.css
@@ -54,6 +54,14 @@ article{
   margin-bottom: 20px;
 }
 
+.article_body table th,.article_body table td{
+    padding:6px 13px;border:1px solid #ddd
+}
+
+.article_body table tr{
+    background-color:#fff;border-top:1px solid #ccc
+}
+
 .post-date {
   text-transform: uppercase;
   font-size: 13px;
