Fixed lang attribute on <html> tag.

--- a/_includes/themes/dbyll/default.html
+++ b/_includes/themes/dbyll/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html{% if page.lang %} lang="{{ page.lang }}"{% endif %}>
 
 {% include themes/dbyll/header.html %}
 
