Tags and layout:
- Replaced "english" and "français" tags by "in english" "en français"
- Added Hopwork to bio
- replaced default images with mine

--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -36,8 +36,10 @@
 <!-- Modernizr -->
 <script src="{{ site.url }}/assets/js/vendor/modernizr-2.7.1.custom.min.js"></script>
 
-<link href='//fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700%7CPT+Serif:400,700,400italic' rel='stylesheet' type='text/css'>
-
+<!-- <link href='//fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700%7CPT+Serif:400,700,400italic' rel='stylesheet' type='text/css'> -->
+<!-- <link href='http://fonts.googleapis.com/css?family=PT+Sans|PT+Sans+Narrow:400,700|Roboto+Slab:700,400' rel='stylesheet' type='text/css'> -->
+<!-- <link href='http://fonts.googleapis.com/css?family=Source+Code+Pro:400,700|Sanchez:400italic,400' rel='stylesheet' type='text/css'> -->
+<link href='http://fonts.googleapis.com/css?family=PT+Mono|Sanchez:400italic,400' rel='stylesheet' type='text/css'>
 <!-- Icons -->
 <!-- 16x16 -->
 <link rel="shortcut icon" href="{{ site.url }}/favicon.ico">
