--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,7 +1,7 @@
 // TYPOGRAPHY ================================================
 $doc-font-size: 16;
 $doc-line-height: 26;
-$paragraph-indent: true !default;
+$paragraph-indent: false !default;
 $base-font: 'Sanchez', serif;
 $heading-font: 'PT Sans Narrow', sans-serif;
 $code-font: "PT Mono", Monaco, "Courier New", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", monospace;
